# hr-agent

./: .gitignore  README.md  admin.html  app.py  docker-compose.yml  hr_agent.md  main.py  pyproject.toml
.github/workflows/: c.yaml  ci.yaml
.pi/skills/: README.md
.pi/skills/code-reviewer/: SKILL.md
.pi/skills/code-reviewer/references/: security-checklist.md
.pi/skills/code-reviewer/scripts/: review.py  security-check.py
.pi/skills/deployment-agent/: SKILL.md
.pi/skills/deployment-agent/references/: pre-deployment-checklist.md
.pi/skills/deployment-agent/scripts/: deploy.sh  health-check.sh  pre-deploy-check.py  rollback.sh
agents/: eval_agentic.py  nodes.py  pipeline.py  prompt_loader.py  schemas.py  state.py
api/: main.py  redis_client.py  routes.py  schemas.py
api/guardrails/: cache.py  guardrails.py  limiter.py
config/: settings.py
core/: secrets.py
data/golden_test_set/: golden_test_set.json
data/golden_test_set/baseline_eval_results/: baseline_results_q0-10_20260409_085312.json  baseline_results_q11-20_20260409_091246.json  baseline_results_q20-30_20260409_091943.json  baseline_results_q30-40_20260409_092630.json  baseline_results_q40-50_20260409_095713.json  baseline_scores_q0-10_20260409_085312.json  baseline_scores_q11-20_20260409_091246.json  baseline_scores_q20-30_20260409_091943.json  baseline_scores_q30-40_20260409_092630.json  baseline_scores_q40-50_20260409_095713.json
data/golden_test_set/policy_aware_eval_results/: policy_aware_results_20260409_090041.json  policy_aware_results_q0-10_20260409_222453_rerank.json  policy_aware_results_q10-20_20260409_100551.json  policy_aware_results_q20-30_20260409_101515.json  policy_aware_results_q30-40_20260409_102302.json  policy_aware_results_q40-50_20260409_103020.json  policy_aware_scores_20260409_090041.json  policy_aware_scores_q0-10_20260409_222453_rerank.json  policy_aware_scores_q10-20_20260409_100551.json  policy_aware_scores_q20-30_20260409_101515.json  policy_aware_scores_q30-40_20260409_102302.json  policy_aware_scores_q40-50_20260409_103020.json
data/hr_documents/processed/: full_text_debug.txt  policies.json  remaining_placeholders.txt  section_metadata.json  vanaciprime_handbook.md
data/hr_documents/processed/policy_aware/: policies.json
data/hr_documents/raw/: supplementary_policies.txt
deployment/: Dockerfile  docker-compose.prod.yml  nginx.conf
integrations/: discord_bot.py
localstack_data/cache/: machine.json
planning/: HR_AI_Copilot_VanaciRetain_Plan_v2.docx  analytics_spec.md  deployment_spec.md  issues.md  policy_agent_spec.md
prompts/v1/: chat.yaml  generate.yaml  grader.yaml  grounding.yaml  router.yaml  transform.yaml
rag/: config.py  db.py  reindex_all.py  retriever.py  retriever_enterprise.py  worker.py
rag/baseline/: baseline_evaluation.py  baseline_rag.py  ingest_naive.py
rag/pipeline/: chunker.py  embedder.py  loader.py  pipeline.py  upserter.py
rag/policy_aware/: ingest_policy_aware.py  policy_aware_evaluation.py  policy_aware_rag.py
redis_data/: dump.rdb
redis_data/appendonlydir/: appendonly.aof.1.base.rdb
scripts/: aws_secrets.py  backfill_neon_from_qdrant.py  eval_document.py  eval_langsmith.py  eval_reranker.py  golden_test_set.py  llm_manager.py  localstack_setup.py  preprocess_handbook.py  storage.py
tests/: conftest.py  test_api.py  test_cache.py  test_guardrails.py  test_integration.py  test_preprocessing.py  test_regression.py  test_schemas.py
