[project]
name = "hr-agent"
version = "0.1.0"
description = "HR-copilot- Agentic RAG System for HR Teams"
readme = "README.md"
requires-python = ">=3.11,<3.12"

license = { text = "MIT" }
authors = [{ name = "RohitHebbar" }]

dependencies = [
    # Agent Framework
    "langgraph>=0.4.0,<2.0.0",
    "langchain>=0.3.0,<2.0.0",
    "langchain-core>=0.3.0,<2.0.0",
    "langchain-community>=0.3.0,<2.0.0",
    "langchain-groq>=0.2.0,<2.0.0",
    "langchain-text-splitters>=0.3.0,<2.0.0",
    # Document Loading
    "pymupdf>=1.24.0,<2.0.0",
    # Embeddings / ML
    # Intel Mac
    "torch>=2.2.2,<2.3.0; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    # Everything else
    "torch>=2.6.0,<2.7.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "sentence-transformers>=3.0.0,<4.0.0",
    "transformers>=4.44.0,<4.50.0",
    "langchain-huggingface>=0.1.0,<2.0.0",
    # Vector Database
    "qdrant-client>=1.7.0",
    "langchain-qdrant>=0.2.0,<2.0.0",
    # Structured Database
    "supabase>=2.0.0",
    # API
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    # RAG Evaluation
    "ragas>=0.2.0,<0.4.0",
    # ML / Data
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0,<2.0.0",
    # MLOps
    "mlflow>=2.18.0",
    # Re-ranking
    "flashrank>=0.2.0",
    # LLM Providers
    "groq>=0.37.0",
    "langchain-google-genai>=2.1.12",
    "langchain-openai>=0.3.35",
    # Infra / Backend
    "streamlit>=1.56.0",
    "discord-py>=2.7.1",
    "httpx>=0.28.1",
    "redis>=7.4.0",
    "slowapi>=0.1.9",
    # AWS
    "boto3>=1.42.97",
    "unstructured[docx,pdf]>=0.17.0",
    "fastembed>=0.8.0",
    "openpyxl>=3.1.5",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.12",
    "llama-parse>=0.6.94",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "ruff>=0.8.0",
    "py-spy>=0.3.14",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "agents", "rag", "models", "mcp"]

[tool.ruff]
ignore = ["E402", "F811", "F841", "F601", "E501"]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
markers = [
    "regression: marks regression quality gate tests",
    "integration: marks integration tests requiring real services",
]

[tool.uv]
constraint-dependencies = [
    # Intel Mac fallback — onnxruntime <1.19 requires numpy <2
    "onnxruntime>=1.17.0,<1.19.0; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    # Modern platforms
    "onnxruntime>=1.21.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "pyarrow>=18.0.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
